fix blurb too wide in release page - full-width is only needed for homepage releases

--- a/src/components/releases/HomePageSlantRelease.scss
+++ b/src/components/releases/HomePageSlantRelease.scss
@@ -2,6 +2,9 @@
 @use './Release-base.scss';
 
 .Release.HomePageSlantRelease {
+  @include globals.full-width;
+  position: relative; /* so can position skewed background div */
+
   .Release-slant {
     position: absolute;
     left: 0;
